fix: slider overflow

--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -113,4 +113,5 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 1;
 }
